--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
 title: KAJMAR FARMS
-description: Weimaraners and Artifical Insemination
+description: Weimaraners and Artificial Insemination
